tests/baselines/reference/parserComputedPropertyName10.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName10.ts(2,4): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName10.ts(2,5): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName10.ts (2 errors) ====
    class C {
       [e] = 1
       ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
        ~
!!! error TS2304: Cannot find name 'e'.
    }